--- a/index.html
+++ b/index.html
@@ -1,2 +1,149 @@
-<h1>Ez a kezdő oldal <h1>
-<ha href=oraredn>
+<head>
+    <title>cica</title>
+    <meta charset="utf-8">
+</head>
+<style>
+	body{
+		text-align: center;
+		background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fundsgn.com%2Fwebsite-dark-backgrounds%2F&psig=AOvVaw2efAdLnN1MkbEp4epzelTX&ust=1673607054487000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCLCy2abuwfwCFQAAAAAdAAAAABAD);
+	}
+</style>
+<body>
+    <h1> </h1>Szekeres Dorina</h1>
+	<br>
+	<marquee bgcolor="grey" width="60%"> sziamia </marquee>
+	<hr size="0" width="60%">
+	<a href="https://www.youtube.com/watch?v=IgXsQWzsAaY">menö zene;D</a>
+	<br>
+	<a href="https://github.com/bakosniki/sagvari">ez a csodás github fiókom:P</a>
+	<br>
+	<a href="bemut.html">kattints rám</a>
+	<br>
+	<div class="gombok">
+		<button class="btn" onclick="location.href='https://www.friv-2017.com/';" type="button">games</button>
+		<button class="btn" onclick="location.href= 'http://www.gyakg.u-szeged.hu/sagvari/';" type="button">school</button>
+	<br>
+
+<a href=""><img src=""></a>
+<a href="https://twitter.com/home"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a>
+<a href=""><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a>
+
+    <p><h2>hobbijaim:</h2></p>
+    <li>zene</li>
+	<li>írás</li>
+    <li>olvasás</li>
+    <table>
+        <tr>
+            <tr><img title="koncertek:)" src="https://www.centralpark.com/downloads/9413/download/concert-anthony-delanoix.jpg?cb=cb901254ad1af8d552f4ff9ba81c4b40"></tr>
+        </tr>
+    </table>
+    <p><h2>kedvenc állatom:</h2></p>
+    <li>rozmár</li>
+   
+	
+	
+	
+
+<br>
+    </table>
+
+    <html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title></title>
+		<meta http-equiv="CONTENT-LANGUAGE" content="hu"> 
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2">
+		<META NAME="keywords" CONTENT="Órarend">
+		<META NAME="description" CONTENT="">
+		<link rel="Shortcut icon" href="/css/alapkepek/logo.ico" type="image/x-icon" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="rss_m.xml">
+		<link href="/css/alap.css" rel="stylesheet" type="text/css">
+		<link href="/css/style_alap.css" rel="stylesheet" type="text/css">
+	</head>
+
+
+	<body>
+		<table width="966" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#ffffff">
+		<tr>
+			<td width="4" bgcolor="#7B6945" style="border-right: solid 1px #ffffff;"></td>
+			<td width="956" valign="top" bgcolor="#3D5632">
+				<div class="fej_csik"></div>			
+			</td>
+			<td width="4" bgcolor="#7B6945" style="border-left: solid 1px #ffffff;"></td>
+		</tr>
+		<tr>
+			<td width="4" bgcolor="#7B6945" style="border-right: solid 1px #ffffff;"></td>
+			<td>
+
+	
+
+
+                <h1>Órarend</h1>
+                <table>
+                    <tr>
+                        <th>óra</th> <th>Hétfő</th> <th>Kedd</th>
+                        <th>Szerda</th> <th>Csütörtök</th> <th>Péntek</th>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>magyar</td> <td>angol</td>
+                        <td>kémia</td> <td>tesi</td> <td>töri</td>
+                        <td>franica</td> <td>ének</td>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>francia</td> <td>matek</td>
+                        <td>földrajz</td> <td>tesi</td> <td>informatika</td>
+                        <td>biológia</td> <td>francia</td>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>irodalom</td> <td>fizika</td>
+                        <td>francia</td> <td>tesi</td> <td>biológia</td>
+                        <td>angol</td> 
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>töri</td> <td>francia</td>
+                        <td>matek</td> <td>angol</td> <td>informatika</td>
+                        <td>magyar</td> <td>biológia</td>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>földrajz</td> <td>irodalom</td>
+                        <td>francia</td> <td>matek</td> <td>fizika</td>
+                        <td>rajz</td> <td>osztályfőnöki</td>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>magyar</td> <td>matek</td>
+                        <td>tesi</td> <td>rajz</td> <td>töri</td>
+                        <td>tesi</td> <td>töri</td>
+                    </tr>
+                    <tr>
+                        <td>1.</td> <td>magyar</td> <td>matek</td>
+                        <td>tesi</td> <td>rajz</td> <td>töri</td>
+                        <td>tesi</td> <td>töri</td>
+                    </tr>
+                </table>
+                <style>
+                    h1, table {
+                        text-align: center;
+                        font-family: Impact;
+                    }
+                    table {
+                        font-size: x-large;    
+                        border-spacing: 4px;
+                        box-shadow: 1px 1px 3px rgb(219, 134, 134);
+                        border-radius: 5px;
+                        padding: 7px;
+                        margin: auto;
+                    }
+                    td {
+                        box-shadow: 1px 1px 4px black inset;
+                        background-color: rgb(144, 201, 235);
+                        text-align: center;
+                        border: solid 1px rgb(28, 47, 53);
+                        padding: 4px;
+                        color: rgb(53, 175, 231);
+                    }
+                    th {
+                        width: 120px;
+                        background-color: rgb(61, 61, 61);
+                        color: rgb(243, 212, 241);
+                        padding: 7px;
+                    }
+                </style>
