--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <head>
     <title>cica</title>
     <meta charset="utf-8">
@@ -11,11 +12,11 @@
 <body>
     <h1> </h1>Szekeres Dorina</h1>
 	<br>
-	<marquee bgcolor="grey" width="60%"> sziamia </marquee>
+	<marquee bgcolor="grey" width="60%"> Larrie for life </marquee>
 	<hr size="0" width="60%">
-	<a href="https://www.youtube.com/watch?v=IgXsQWzsAaY">menö zene;D</a>
+	<a href="https://www.youtube.com/watch?v=IgXsQWzsAaY">zene;D</a>
 	<br>
-	<a href="https://github.com/bakosniki/sagvari">ez a csodás github fiókom:P</a>
+	<a href="https://github.com/dorinasz?tab=repositories"> github </a>
 	<br>
 	<a href="bemut.html">kattints rám</a>
 	<br>
@@ -147,3 +148,5 @@
                         padding: 7px;
                     }
                 </style>
+
+			
